feat: Initialize macOS Flutter project with essential files and configurations
- Added macOS project structure including AppDelegate, MainFlutterWindow, and Info.plist.
- Created Xcode scheme and workspace files for project management.
- Included asset files for app icons in various sizes.
- Configured application settings in xcconfig files for Debug and Release builds.
- Implemented basic UI with MainMenu.xib and integrated Flutter view.
- Added initial test case in RunnerTests.
- Updated pubspec.yaml with a detailed project description.
- Modified index.html for web compatibility and improved meta tags.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: mesero_2punto0
-description: "A new Flutter project."
+description: "A Flutter project for a restaurant management app. This project is designed to provide a comprehensive solution for restaurant management, including features for order processing, menu management, and customer interaction."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
